--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,18 @@
 name: Deploy to GitHub Pages
 on:
   push:
-    branches: [ main ]  # 仅在main分支推送代码时触发
+    branches: [ main ]
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4  # 拉取仓库代码
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '18'  # 匹配你项目的Node.js版本
-      - run: npm install  # 安装依赖
-      - run: npm run build  # 执行Vite构建
+          node-version: '18'
+      - run: npm install
+      - run: npm run build
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist  # Vite默认构建输出目录
+          publish_dir: ./dist
