--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.28.0",
+    "firebase": "10.14.1"
   },
   "devDependencies": {
     "vite": "5.4.8",
