--- a/package.json
+++ b/package.json
@@ -1,4 +1,19 @@
 {
+  "name": "avalon-platform",
+  "private": true,
+  "version": "0.1.0",
+  "workspaces": [
+    "server",
+    "web"
+  ],
+  "scripts": {
+    "build": "npm -w server run build && npm -w web run build",
+    "dev": "npm -w server run dev & npm -w web run dev",
+    "start": "npm -w server start"
+  }
+}
+
+{
   "name": "avalon-host",
   "version": "0.1.0",
   "private": true,
