--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -24,10 +24,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
 
-      - name: Install deps
-        run: npm ci
+      - name: Install deps (workspaces)
+        run: npm install
 
       - name: Build web
         working-directory: web
