--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "nanoid": "^5.0.7",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
+    "@types/multer": "^1.4.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
